--- a/React/package.json
+++ b/React/package.json
@@ -3,7 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
+  "scripts": {
+    "prestart": "npm install",
+    "start": "http-server"
+  },
   "dependencies": {
-    "mobx": "2.3.7"
+    "mobx": "2.3.7",
+    "mobx-react": "3.5.1",
+    "react": "15.2.1",
+    "react-dom": "15.2.1"
+  },
+  "devDependencies": {
+    "babel-standalone": "6.10.3",
+    "http-server": "0.9.0"
   }
 }
