--- a/AngularJS/package.json
+++ b/AngularJS/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "react-mobx-example",
+  "name": "angularjs-mobx-example",
   "version": "1.0.0",
-  "description": "",
   "license": "MIT",
   "scripts": {
     "prestart": "npm install",
     "start": "webpack-dev-server"
-  },
-  "dependencies": {
-    "mobx": "2.3.7",
-    "mobx-react": "3.5.1",
-    "react": "15.2.1",
-    "react-dom": "15.2.1"
   },
   "devDependencies": {
     "babel-core": "6.9.1",
@@ -19,12 +12,11 @@
     "babel-loader": "6.2.4",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
     "babel-preset-stage-1": "6.5.0",
-    "eslint-plugin-react": "5.1.1",
-    "eslint": "2.13.1",
-    "react-hot-loader": "3.0.0-beta.2",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
+  },
+  "dependencies": {
+    "angular": "1.5.8"
   }
 }
