--- a/AngularJS/package.json
+++ b/AngularJS/package.json
@@ -17,6 +17,8 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "angular": "1.5.8"
+    "angular": "1.5.8",
+    "lodash": "^4.14.0",
+    "mobx": "2.3.7"
   }
 }
