--- a/AngularJS/package.json
+++ b/AngularJS/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "angular": "1.5.8",
-    "lodash": "^4.14.0",
+    "lodash": "4.14.0",
     "mobx": "2.3.7"
   }
 }
