--- a/React/package.json
+++ b/React/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "prestart": "npm install",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": " karma start"
   },
   "dependencies": {
     "mobx": "2.3.7",
@@ -21,8 +22,17 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-1": "6.5.0",
-    "eslint-plugin-react": "5.1.1",
+    "chai": "3.5.0",
     "eslint": "2.13.1",
+    "eslint-plugin-react": "5.1.1",
+    "karma": "0.13.19",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-cli": "1.0.0",
+    "karma-mocha": "1.0.1",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-story-reporter": "0.3.1",
+    "karma-webpack": "1.7.0",
+    "mocha": "2.5.3",
     "react-hot-loader": "3.0.0-beta.2",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
